[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andes"
# Version is managed by versioneer through setup.py
dynamic = ["version"]
description = "Python software for symbolic power system modeling and numerical analysis."
readme = "README.md"
authors = [
    {name = "Hantao Cui", email = "cuihantao@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"

# Core dependencies with enforced versions
dependencies = [
    "kvxopt>=1.3.2.0",
    "numpy>=1.20.0,<2.3",
    "scipy>=1.7.0,<1.14",
    "sympy>=1.6,!=1.10.0,<2.0",
    "pandas>=1.3.0,<3.0",
    "matplotlib>=3.3.0,<4.0",
    "openpyxl>=3.0.0,<4.0",
    "xlsxwriter>=1.3.0,<4.0",
    "dill>=0.3.4,<1.0",
    "pathos>=0.2.8,<1.0",
    "tqdm>=4.60.0,<5.0",
    "pyyaml>=5.4.0,<7.0",
    "coloredlogs>=15.0,<16.0",
    "chardet>=4.0.0,<6.0",
    "psutil>=5.8.0,<8.0",
    "texttable>=1.6.0,<2.0",
    "numba>=0.53.0,<1.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "coverage>=6.0,<8.0",
    "pytest>=7.4,<8.0",
    "flake8>=6.0,<8.0",
    "sphinx>=5.0,<8.0",
    "ipython>=8.0,<10.0",
    "numpydoc>=1.4,<2.0",
    "sphinx-copybutton>=0.5,<1.0",
    "sphinx-panels>=0.4,<1.0",
    "pydata-sphinx-theme>=0.13,<1.0",
    "myst-parser>=0.15,<3.0",
    "myst-nb>=0.13,<2.0",
    "mdit-py-plugins>=0.3.1,<0.4",
    "pre-commit>=3.0,<4.0",
]

# Documentation dependencies
doc = [
    "sphinx>=5.0,<8.0",
    "numpydoc>=1.4,<2.0",
    "sphinx-copybutton>=0.5,<1.0",
    "sphinx-panels>=0.4,<1.0",
    "pydata-sphinx-theme>=0.13,<1.0",
    "myst-parser>=0.15,<3.0",
    "myst-nb>=0.13,<2.0",
    "mdit-py-plugins>=0.3.1,<0.4",
]

# Interoperability dependencies
interop = [
    "pandapower>=2.10,<3.0",
    "pypowsybl>=0.20,<2.0",
]

# Web interface dependencies
web = [
    "ipywidgets==7.7.*",  # Pinned due to tqdm bar compatibility issue
]

# All optional dependencies combined
all = [
    "coverage>=6.0,<8.0",
    "pytest>=7.4,<8.0",
    "flake8>=6.0,<8.0",
    "sphinx>=5.0,<8.0",
    "ipython>=8.0,<10.0",
    "numpydoc>=1.4,<2.0",
    "sphinx-copybutton>=0.5,<1.0",
    "sphinx-panels>=0.4,<1.0",
    "pydata-sphinx-theme>=0.13,<1.0",
    "myst-parser>=0.15,<3.0",
    "myst-nb>=0.13,<2.0",
    "mdit-py-plugins>=0.3.1,<0.4",
    "pre-commit>=3.0,<4.0",
    "pandapower>=2.10,<3.0",
    "pypowsybl>=0.20,<2.0",
    "ipywidgets==7.7.*",
]

[project.scripts]
andes = "andes.cli:main"

[project.urls]
Homepage = "https://github.com/curent/andes"
Documentation = "https://andes.readthedocs.io"
Repository = "https://github.com/curent/andes"
Issues = "https://github.com/curent/andes/issues"
Changelog = "https://andes.readthedocs.io/en/latest/release-notes.html"

[tool.setuptools]
# Automatic package discovery
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["andes*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
andes = [
    "cases/*.xlsx",
    "cases/*.m",
    "cases/*.raw",
    "cases/*.dyr",
    "cases/*.py",
    "cases/*.json",
    "io/psse-dyr.yaml",
    "io/psse-modes.yaml",
    "_version.py",
]

# Version is dynamically determined by versioneer in setup.py
# Do not configure [tool.setuptools.dynamic.version] when using versioneer

# Versioneer configuration
[tool.versioneer]
VCS = "git"
style = "pep440-post"
versionfile_source = "andes/_version.py"
versionfile_build = "andes/_version.py"
tag_prefix = "v"
parentdir_prefix = "andes-"

# Flake8 configuration (if you want to add it)
[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "versioneer.py",
    "andes/_version.py",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["andes"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "versioneer.py",
    "andes/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
